--- a/pages/mainPage/mainPage.wxss
+++ b/pages/mainPage/mainPage.wxss
@@ -1,4 +1,60 @@
 /* pages/mainPage/mainPage.wxss */
+
+page{
+  background: #f7f7f7f7;
+}
+.imageContainer{
+  width: 100%;
+  height: 500rpx;
+  background:rgba(0,0,0,0.5);
+}
+.item{
+  height: 500rpx;
+}
+.itemImg{
+  position: absolute;
+  width: 100%;
+  height: 380rpx;
+  border-radius: 15rpx;
+  z-index: 5;
+  opacity: 0.7;
+  top: 13%;
+}
+.active{
+  opacity: 1;
+  z-index: 10;
+  height: 430rpx;
+  top: 7%;
+  transition:all .2s ease-in 0s;
+}
+
+
+
+
+.btn1{
+
+  padding: 0;
+
+  border: none;
+
+}
+
+.btn2{
+
+  padding: 0;
+
+  border: none;
+
+}
+
+.btn3{
+
+  padding: 0;
+
+  border: none;
+
+}
+
 .menu-wrp {
   width:100%;
   margin-top:20rpx;
