--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -2,7 +2,7 @@
 <view class="container" style="background-image:url(../images/background.jpg);">
   <view class="icon">
     <image style="opacity:1.0" src="{{icon}}" mode="cover"></image>
-    <button bindtap="go">go</button>
+    <button class="begin-button" style="background:grey; text-align:center;font-size:20px" bindtap="go">Go</button>
   </view>
   <view class="health-warm" style="text-align:center">
     <text class="health-warm-title" style="font-size:12px">\n\n\n健康游戏忠告\n</text>
